Users can retrieve information about their account
